fix a photo align issue in index page

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -134,7 +134,7 @@ nav li a:hover,nav li a:focus {
 
 img{
   width: 25%;
-  margin-top: -20px;
+  /* margin-top: -20px; */
 }
 
 /* .header-logo-container {
